[package]
name = "wifi-test"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "#website#"
repository = "#repository#"
description = "#description#"
authors = ["#author#"]

# Dependencies that will included with final binary
[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
uuid = "1.21.0"
zbus = "5.13.2"

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
